--- a/CaseStudy1.html
+++ b/CaseStudy1.html
@@ -140,7 +140,7 @@
 
 <header class="header pb-12" id="overview">
     <div class="media-box min-h-[350px] mb-8">
-        <img src="appname.png" class="image-full-width object-cover" alt="Pixelated Scorecade App Name Screenshot">
+        <img src="AppName.png" class="image-full-width object-cover" alt="Pixelated Scorecade App Name Screenshot">
     </div>
     <div class="tldr">
         <h1 class="text-6xl font-extrabold mb-4">Pixelated Scorecade</h1>
@@ -218,7 +218,7 @@
     </ul>
     <figure class="media mt-8">
         <div class="media-box min-h-[250px]">
-            <img src="MockUps2.png" alt="Low-fi wireframes, mid-fi iteration, and pixel-style moodboard" class="image-full-width object-cover" />
+            <img src="MockUps2.png" alt="Low-fi wireframes; Moqups" class="image-full-width object-cover" />
         </div>
     </figure>
 </section>
@@ -236,7 +236,7 @@
     </ul>
     <figure class="media mt-8">
         <div class="media-box max-h-[400px]">
-            <img src="https://raw.githubusercontent.com/Aram814/Portfolio/refs/heads/main/multiscreens.png" alt="App screenshots of home, add score, and leaderboard views" class="image-full-width object-cover" />
+            <img src="multiscreens.png" alt="App screenshots of home, add score, and leaderboard views" class="image-full-width object-cover" />
         </div>
     </figure>
 </section>
