--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
                         <div class="p-6">
                             <h3 class="text-2xl font-semibold text-[var(--text-contrast)] mb-2">QueerSafeSpace App</h3>
                             <p class="text-[var(--text-primary)] text-sm mb-4">Safety, Community, Anonymous Updates</p>
-                            <p class="text-[var(--text-primary)]"> community-powered app that helps LGBTQ+ people find and share safe spaces. Currently in MVP development with FlutterFlow and Supabase, featuring a crowdsourced safety map, anonymous submissions, and crisis mode.</p>
+                            <p class="text-[var(--text-primary)]">A community-powered app that helps LGBTQ+ people find and share safe spaces. Currently in MVP development with FlutterFlow and Supabase, featuring a crowdsourced safety map, anonymous submissions, and crisis mode.</p>
                         </div>
                     </li>
 
