--- a/gallery.html
+++ b/gallery.html
@@ -358,7 +358,7 @@
                         <div class="p-6">
                             <h3 class="text-2xl font-semibold text-[var(--text-contrast)] mb-2">QueerSafeSpace App</h3>
                             <p class="text-[var(--text-primary)] text-sm mb-4">Safety, Community, Anonymous Updates</p>
-                            <p class="text-[var(--text-primary)]">An app developed to aid in the safety of the LGBTQ+ community by allowing anonymous updates to locations to mark with safety ratings, tags, and additional details.</p>
+                            <p class="text-[var(--text-primary)]">A community-powered app that helps LGBTQ+ people find and share safe spaces. Currently in MVP development with FlutterFlow and Supabase, featuring a crowdsourced safety map, anonymous submissions, and crisis mode.</p>
                         </div>
                     </li>
 
@@ -368,7 +368,7 @@
                         <div class="p-6">
                             <h3 class="text-2xl font-semibold text-[var(--text-contrast)] mb-2">Death Doula Webpage</h3>
                             <p class="text-[var(--text-primary)] text-sm mb-4">Web Design, Business Services, Testimonials, Blog</p>
-                            <p class="text-[var(--text-primary)]">Full construct and design of a personal/private business for local Death Doula services. Requirements were for both desktop and mobile compatibility, ability to book consulting, read testimonies, view services, and add a feature "blog."</p>
+                            <p class="text-[var(--text-primary)]">A spiritual, earthy website designed for a Florida-based death doula. Built with a Supabase backend support and a with a sage palette, the site balances comfort with professionalism, offering resources, booking, and future blog/gallery features.</p>
                         </div>
                     </li>
                     
@@ -378,7 +378,7 @@
                         <div class="p-6">
                             <h3 class="text-2xl font-semibold text-[var(--text-contrast)] mb-2">WCAG 2.2 AA Audit Sheet</h3>
                             <p class="text-[var(--text-primary)] text-sm mb-4">Accessibility, Auditing, Compliance</p>
-                            <p class="text-[var(--text-primary)]">A comprehensive audit sheet created to help designers and developers check for WCAG 2.2 AA compliance.</p>
+                            <p class="text-[var(--text-primary)]">An accessibility-focused project that distills WCAG standards into a practical checklist for designers and developers. Created as a UX artifact to make compliance easier and more actionable.</p>
                         </div>
                     </li>
 
@@ -388,17 +388,17 @@
                         <div class="p-6">
                             <h3 class="text-2xl font-semibold text-[var(--text-contrast)] mb-2">Women's Fellowship Bulletin</h3>
                             <p class="text-[var(--text-primary)] text-sm mb-4">WCAG, Accesibility, User Research & Testing</p>
-                            <p class="text-[var(--text-primary)]">The women's group of a community church needed a website that was accesible both desktop or mobile and could act as a "bulletin board" for their group. </p>
+                            <p class="text-[var(--text-primary)]">A virtual bulletin designed for a women’s fellowship group. Focused on clear typography, structured layouts, and accessible design to ensure readability across all ages.</p>
                         </div>
                     </li>
 
                     <!-- New Project Card 6 - Copy and customize this block for another project -->
                     <li class="bg-[var(--bg-primary)] rounded-xl shadow-xl overflow-hidden border-2 border-[var(--border-default)] project-card cursor-pointer" onclick="openModal('project6')">
-                        <img src="https://placehold.co/600x300/E74C3C/FFFFFF?text=Project+6" alt="Placeholder image for another new project" class="w-full h-48 object-cover border-b-2 border-[var(--glitch-red-shadow)]">
+                        <img src="https://placehold.co/600x300/E74C3C/FFFFFF?text=CPR+Ready" alt="Placeholder image for CPR Ready Project" class="w-full h-48 object-cover border-b-2 border-[var(--glitch-red-shadow)]">
                         <div class="p-6">
-                            <h3 class="text-2xl font-semibold text-[var(--text-contrast)] mb-2">Pending</h3>
+                            <h3 class="text-2xl font-semibold text-[var(--text-contrast)] mb-2">CPR Ready</h3>
                             <p class="text-[var(--text-primary)] text-sm mb-4">UX Designer</p>
-                            <p class="text-[var(--text-primary)]">This section should give a quick summary of what the project is about and what you learned or accomplished.</p>
+                            <p class="text-[var(--text-primary)]">A mobile-first learning tool that helps adults master and retain CPR skills. Currently in wireframing and prototyping stages, this project emphasizes usability, retention strategies, and life-saving accessibility.</p>
                         </div>
                     </li>
 
