--- a/CaseStudy1.html
+++ b/CaseStudy1.html
@@ -59,7 +59,21 @@
 
         .wrap { max-width: var(--maxw); margin: 0 auto; padding: 32px 24px; position: relative; }
 
-        #theme-toggle { position: fixed; top: 16px; right: 24px; padding: 8px; border-radius: 999px; border: none; background: var(--bg-secondary); cursor: pointer; display: flex; align-items: center; justify-content: center; z-index: 999; }
+        #top-header {
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            z-index: 1000;
+            display: flex;
+            justify-content: flex-end;
+            align-items: center;
+            padding: 16px 24px;
+            gap: 16px;
+            background-color: var(--bg-primary);
+        }
+
+        #theme-toggle { padding: 8px; border-radius: 999px; border: none; background: var(--bg-secondary); cursor: pointer; display: flex; align-items: center; justify-content: center; z-index: 999; }
         #theme-toggle svg { width: 24px; height: 24px; color: var(--text-primary); transition: all .3s; }
         #theme-toggle svg.hidden { display: none; }
         
@@ -127,18 +141,24 @@
     </style>
 </head>
 <body class="dark-mode">
+
+<div id="top-header">
+    <a href="https://aram814.github.io/Portfolio/gallery.html" class="px-4 py-2 text-sm rounded-full border border-border-default text-text-primary hover:bg-bg-secondary transition-colors duration-300">
+        Return to Project Gallery
+    </a>
+    <button id="theme-toggle" aria-label="Toggle light and dark mode">
+        <svg id="moon-icon" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z"></path>
+        </svg>
+        <svg id="sun-icon" class="hidden" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z"></path>
+        </svg>
+    </button>
+</div>
+
 <div class="wrap">
 
-<button id="theme-toggle" aria-label="Toggle light and dark mode">
-    <svg id="moon-icon" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z"></path>
-    </svg>
-    <svg id="sun-icon" class="hidden" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z"></path>
-    </svg>
-</button>
-
-<header class="header pb-12" id="overview">
+<header class="header pt-24 pb-12" id="overview">
     <div class="media-box min-h-[350px] mb-8">
         <img src="AppName.png" class="image-full-width object-cover" alt="Pixelated Scorecade App Name Screenshot">
     </div>
