--- a/gallery.html
+++ b/gallery.html
@@ -419,7 +419,7 @@
         <div class="modal-content">
             <span class="close-button" onclick="closeModal('project1')" aria-label="Close">&times;</span>
             <h3 id="project1ModalTitle" class="text-3xl font-bold text-[var(--glitch-yellow-main)] mb-4">Arcade High Score Tracking App</h3>
-            <img src="https://raw.githubusercontent.com/Aram814/Assets/refs/heads/main/highscore.png" alt="Screenshot of Scorecade app interface showing high score list" class="w-full h-auto object-cover mb-6 rounded-lg border-2 border-[var(--glitch-red-shadow)]">
+            <img src="AppName.png" alt="Pixelated Scorecade (application name)" class="w-full h-auto object-cover mb-6 rounded-lg border-2 border-[var(--glitch-red-shadow)]">
             <p class="text-[var(--text-primary)] mb-4">
                 This project was instrumental in deepening my understanding of creating dynamic, user-friendly applications, and the challenges involved in ensuring a seamless and engaging user journey within a complex system.
             </p>
