--- a/CaseStudy2.html
+++ b/CaseStudy2.html
@@ -240,7 +240,7 @@
     </ul>
     <figure class="media mt-8">
         <div class="media-box min-h-[250px]">
-            <img src="FinalProduct" alt="SpashScreen and Hi-fi interation wireframes" class="image-full-width object-cover" />
+            <img src="FinalProduct.png" alt="SpashScreen and Hi-fi interation wireframes" class="image-full-width object-cover" />
         </div>
     </figure>
 </section>
