--- a/gallery.html
+++ b/gallery.html
@@ -470,7 +470,7 @@
                 <strong>Methodologies:</strong> Information Architecture, Content Strategy, Booking System Integration, Testimonial Display, Responsive Web Design, Blog Integration.
             </p>
             <p class="text-[var(--text-primary)]">
-                <strong>Key Outcomes:</strong> TBA
+                <strong>Key Outcomes:</strong> Requirements for both desktop and mobile compatibility was crucial. Further development is being worked for the ability to book consulting, enhanced my knowledge with Supabase by adding in Testimonial features and an added "blog."
             </p>
             <a href="CaseStudy3.html" class="inline-block mt-6 bg-[var(--glitch-blue-shadow)] text-[var(--bg-primary)] font-bold py-3 px-6 rounded-lg text-md uppercase tracking-wider glitch-button border-2 border-[var(--glitch-blue-shadow)] hover:border-[var(--glitch-yellow-main)]">
                 View Full Case Study
