--- a/CaseStudy5.html
+++ b/CaseStudy5.html
@@ -228,7 +228,7 @@
         </div>
         <figure class="media mx-auto">
             <div class="media-box min-h-[250px]">
-                <img src="MainSiteWireframe.png" alt="Hand-drawn Wireframe" class="object-cover w-full h-full rounded-md" />
+                <img src="MeetingsWireframe.png" alt="Hand-drawn Wireframe" class="object-cover w-full h-full rounded-md" />
             </div>
         </figure>
     </div>
