--- a/resumeindex.html
+++ b/resumeindex.html
@@ -413,7 +413,7 @@
         <div class="container mx-auto px-6 md:px-12">
             <!-- Download Resume Button -->
             <div class="my-4">
-                <a href="https://github.com/aram814/portfolio/raw/main/Amanda_Ramirez_Resume.pdf" download="Amanda_Ramirez_Resume.pdf" class="inline-block py-3 px-6 rounded-lg font-bold text-lg transition duration-300 ease-in-out
+                <a href="https://github.com/aram814/portfolio/raw/main/Amanda Ramirez Resume.pdf" download="Amanda Ramirez Resume.pdf" class="inline-block py-3 px-6 rounded-lg font-bold text-lg transition duration-300 ease-in-out
                 bg-[var(--glitch-yellow-main)] text-[var(--bg-primary)]
                 hover:bg-[var(--glitch-red-shadow)] hover:text-white
                 focus:outline-none focus:ring-4 focus:ring-[var(--glitch-blue-shadow)]">
