--- a/gallery.html
+++ b/gallery.html
@@ -364,7 +364,7 @@
 
                     <!-- Project Card 3: Death Doula Webpage -->
                     <li class="bg-[var(--bg-primary)] rounded-xl shadow-xl overflow-hidden border-2 border-[var(--border-default)] project-card cursor-pointer" onclick="openModal('project3')">
-                        <img src="https://raw.githubusercontent.com/Aram814/Assets/refs/heads/main/Snedmeonmyway.png" alt="Screenshot of Death Doula webpage homepage" class="w-full h-48 object-cover border-b-2 border-[var(--glitch-yellow-main)]">
+                        <img src="SiteTitle.png" alt="Screenshot of Death Doula webpage homepage" class="w-full h-48 object-cover border-b-2 border-[var(--glitch-yellow-main)]">
                         <div class="p-6">
                             <h3 class="text-2xl font-semibold text-[var(--text-contrast)] mb-2">Death Doula Webpage</h3>
                             <p class="text-[var(--text-primary)] text-sm mb-4">Web Design, Business Services, Testimonials, Blog</p>
@@ -384,7 +384,7 @@
 
                     <!-- New Project Card 5 - Copy and customize this block for a new project -->
                     <li class="bg-[var(--bg-primary)] rounded-xl shadow-xl overflow-hidden border-2 border-[var(--border-default)] project-card cursor-pointer" onclick="openModal('project5')">
-                        <img src="https://raw.githubusercontent.com/Aram814/Portfolio/refs/heads/main/project%20img.png" alt="Placeholder image for a new project" class="w-full h-48 object-cover border-b-2 border-[var(--glitch-blue-shadow)]">
+                        <img src="CaseStudy5Snip.png" alt="Placeholder image for a new project" class="w-full h-48 object-cover border-b-2 border-[var(--glitch-blue-shadow)]">
                         <div class="p-6">
                             <h3 class="text-2xl font-semibold text-[var(--text-contrast)] mb-2">Women's Fellowship Bulletin</h3>
                             <p class="text-[var(--text-primary)] text-sm mb-4">WCAG, Accesibility, User Research & Testing</p>
@@ -461,7 +461,7 @@
         <div class="modal-content">
             <span class="close-button" onclick="closeModal('project3')" aria-label="Close">&times;</span>
             <h3 id="project3ModalTitle" class="text-3xl font-bold text-[var(--glitch-yellow-main)] mb-4">Death Doula Webpage</h3>
-            <img src="https://raw.githubusercontent.com/Aram814/Assets/refs/heads/main/Snedmeonmyway.png" alt="Screenshot of Death Doula webpage homepage" class="w-full h-auto object-cover mb-6 rounded-lg border-2 border-[var(--glitch-yellow-main)]">
+            <img src="SiteTitle.png" alt="Screenshot of Death Doula webpage homepage" class="w-full h-auto object-cover mb-6 rounded-lg border-2 border-[var(--glitch-yellow-main)]">
             <p class="text-[var(--text-primary)] mb-4">
                 This project involved the full construct and design of a personal/private business website for local Death Doula services. Requirements were for both desktop and mobile compatibility, ability to book consulting, read testimonies, view services, and add a feature "blog."
             </p>
@@ -505,7 +505,7 @@
         <div class="modal-content">
             <span class="close-button" onclick="closeModal('project5')" aria-label="Close">&times;</span>
             <h3 id="project5ModalTitle" class="text-3xl font-bold text-[var(--glitch-yellow-main)] mb-4">Women's Fellowship Bulletin</h3>
-            <img src="https://raw.githubusercontent.com/Aram814/Portfolio/refs/heads/main/project%20img.png" alt="Placeholder image for a new project" class="w-full h-auto object-cover mb-6 rounded-lg border-2 border-[var(--glitch-blue-shadow)]">
+            <img src="CaseStudy5Snip.png" alt="Placeholder image for a new project" class="w-full h-auto object-cover mb-6 rounded-lg border-2 border-[var(--glitch-blue-shadow)]">
             <p class="text-[var(--text-primary)] mb-4">
                 The women's group of a community church needed a website that was accesible both desktop or mobile and could act as a "bulletin board" for their group. 
             </p>
