--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
 
                     <!-- Project Card 3: Death Doula Webpage -->
                     <li class="bg-[var(--bg-primary)] rounded-xl shadow-xl overflow-hidden border-2 border-[var(--border-default)] project-card cursor-pointer" onclick="openModal('project3')">
-                        <img src="https://raw.githubusercontent.com/Aram814/Assets/refs/heads/main/Snedmeonmyway.png" alt="Screenshot of Death Doula webpage homepage" class="w-full h-48 object-cover border-b-2 border-[var(--glitch-yellow-main)]">
+                        <img src="SiteTitle.png" alt="Screenshot of Death Doula webpage homepage" class="w-full h-48 object-cover border-b-2 border-[var(--glitch-yellow-main)]">
                         <div class="p-6">
                             <h3 class="text-2xl font-semibold text-[var(--text-contrast)] mb-2">Death Doula Webpage</h3>
                             <p class="text-[var(--text-primary)] text-sm mb-4">Web Design, Business Services, Testimonials, Blog</p>
@@ -558,7 +558,7 @@
         <div class="modal-content">
             <span class="close-button" onclick="closeModal('project3')" aria-label="Close">&times;</span>
             <h3 id="project3ModalTitle" class="text-3xl font-bold text-[var(--glitch-yellow-main)] mb-4">Death Doula Webpage</h3>
-            <img src="https://raw.githubusercontent.com/Aram814/Assets/refs/heads/main/Snedmeonmyway.png" alt="Screenshot of Death Doula webpage homepage" class="w-full h-auto object-cover mb-6 rounded-lg border-2 border-[var(--glitch-yellow-main)]">
+            <img src="SiteTitle.png" alt="Screenshot of Death Doula webpage homepage" class="w-full h-auto object-cover mb-6 rounded-lg border-2 border-[var(--glitch-yellow-main)]">
             <p class="text-[var(--text-primary)] mb-4">
                 A spiritual, earthy website designed for a Florida-based death doula. Built with a Supabase backend support and a with a sage palette, the site balances comfort with professionalism, offering resources, booking, and future blog/gallery features.
             </p>
