--- a/resumeindex.html
+++ b/resumeindex.html
@@ -266,7 +266,7 @@
     <!-- Header -->
     <header class="bg-[var(--bg-primary)] text-[var(--text-contrast)] py-6 shadow-lg fixed w-full z-50 rounded-b-xl">
         <div class="container mx-auto flex justify-between items-center px-6 md:px-12">
-            <a href="index.html" class="text-3xl font-bold text-[var(--glitch-yellow-main)] glitch-text" data-text="UX Designer">
+            <a href="https://aram814.github.io/Portfolio/index.html" class="text-3xl font-bold text-[var(--glitch-yellow-main)] glitch-text" data-text="UX Designer">
             UX Designer Resume
             </a>
             <!-- Desktop Navigation and Theme Toggle -->
@@ -277,7 +277,7 @@
                         <li><a href="#experience" class="text-[var(--text-primary)] hover:text-[var(--glitch-blue-shadow)] transition duration-300 text-lg">Experience</a></li>
                         <li><a href="#education" class="text-[var(--text-primary)] hover:text-[var(--glitch-blue-shadow)] transition duration-300 text-lg">Education</a></li>
                         <li><a href="#skills" class="text-[var(--text-primary)] hover:text-[var(--glitch-blue-shadow)] transition duration-300 text-lg">Skills</a></li>
-                        <li><a href="gallery.html#projects" class="text-[var(--text-primary)] hover:text-[var(--glitch-blue-shadow)] transition duration-300 text-lg">Projects</a></li>
+                        <li><a href="https://aram814.github.io/Portfolio/gallery.html" class="text-[var(--text-primary)] hover:text-[var(--glitch-blue-shadow)] transition duration-300 text-lg">Projects</a></li>
                     </ul>
                 </nav>
                 <!-- Theme Toggle Button (Desktop & Mobile) -->
@@ -302,11 +302,11 @@
         <!-- Mobile Navigation Menu -->
         <nav id="mobile-menu" class="hidden md:hidden bg-[var(--bg-primary)]/90 pt-4 pb-2 mt-4 rounded-b-xl border-t border-[var(--border-default)]" role="navigation" aria-label="Mobile Navigation">
             <ul class="flex flex-col items-center space-y-4">
-                <li><a href="index.html" class="block w-full text-center text-[var(--text-primary)] hover:text-[var(--glitch-blue-shadow)] transition duration-300 text-xl py-2">Home</a></li>
+                <li><a href="https://aram814.github.io/Portfolio/index.html" class="block w-full text-center text-[var(--text-primary)] hover:text-[var(--glitch-blue-shadow)] transition duration-300 text-xl py-2">Home</a></li>
                 <li><a href="#experience" class="block w-full text-center text-[var(--text-primary)] hover:text-[var(--glitch-blue-shadow)] transition duration-300 text-xl py-2">Experience</a></li>
                 <li><a href="#education" class="block w-full text-center text-[var(--text-primary)] hover:text-[var(--glitch-blue-shadow)] transition duration-300 text-xl py-2">Education</a></li>
                 <li><a href="#skills" class="block w-full text-center text-[var(--text-primary)] hover:text-[var(--glitch-blue-shadow)] transition duration-300 text-xl py-2">Skills</a></li>
-                <li><a href="gallery.html" class="block w-full text-center text-[var(--text-primary)] hover:text-[var(--glitch-blue-shadow)] transition duration-300 text-xl py-2">Projects</a></li>
+                <li><a href="https://aram814.github.io/Portfolio/gallery.html" class="block w-full text-center text-[var(--text-primary)] hover:text-[var(--glitch-blue-shadow)] transition duration-300 text-xl py-2">Projects</a></li>
             </ul>
         </nav>
     </header>
@@ -342,7 +342,7 @@
                 <div class="bg-[var(--bg-secondary)] rounded-xl shadow-xl p-8 md:p-12 border-2 border-[var(--border-default)] mb-10 scroll-animate">
                     <!-- Contact Info -->
                     <div class="text-center mb-8">
-                        <h2 class="text-3xl font-bold text-[var(--text-contrast)]">Amanda Ramirez</h2>
+                        <h2 class="text-3xl font-bold text-[var(--text-contrast)]">UX Designer</h2>
                         <p class="text-lg text-[var(--text-primary)]">Citrus Springs, FL| (727) 294-2225 | arramirez814@gmail.com</p>
                     </div>
 
@@ -354,8 +354,8 @@
                 </div>
 
                 <!-- Experience -->
-                <div class="bg-[var(--bg-secondary)] rounded-xl shadow-xl p-8 md:p-12 border-2 border-[var(--border-default)] mb-10 scroll-animate">
-                    <h3 id="experience" class="text-2xl font-bold text-[var(--text-contrast)] border-b-2 border-[var(--glitch-red-shadow)] pb-2 mb-4">Experience</h3>
+                <div id="experience" class="bg-[var(--bg-secondary)] rounded-xl shadow-xl p-8 md:p-12 border-2 border-[var(--border-default)] mb-10 scroll-animate">
+                    <h3 class="text-2xl font-bold text-[var(--text-contrast)] border-b-2 border-[var(--glitch-red-shadow)] pb-2 mb-4">Experience</h3>
                     <div class="mb-6">
                         <h4 class="text-xl font-semibold text-[var(--text-contrast)]">Associate Client Manager</h4>
                         <p class="text-[var(--text-primary)]">World Wide Technology (WWT) | Remote | 2021 – Present</p>
@@ -369,8 +369,8 @@
                 </div>
 
                 <!-- Education -->
-                <div class="bg-[var(--bg-secondary)] rounded-xl shadow-xl p-8 md:p-12 border-2 border-[var(--border-default)] mb-10 scroll-animate">
-                    <h3 id="education" class="text-2xl font-bold text-[var(--text-contrast)] border-b-2 border-[var(--glitch-red-shadow)] pb-2 mb-4">Education</h3>
+                <div id="education" class="bg-[var(--bg-secondary)] rounded-xl shadow-xl p-8 md:p-12 border-2 border-[var(--border-default)] mb-10 scroll-animate">
+                    <h3 class="text-2xl font-bold text-[var(--text-contrast)] border-b-2 border-[var(--glitch-red-shadow)] pb-2 mb-4">Education</h3>
                     <ul class="list-disc list-inside space-y-2 text-[var(--text-primary)]">
                         <li>Google UX Design Professional Certificate (2025)</li>
                         <li>Cisco Computer Hardware Basics (2024)</li>
@@ -381,8 +381,8 @@
                 </div>
                     
                 <!-- Skills -->
-                <div class="bg-[var(--bg-secondary)] rounded-xl shadow-xl p-8 md:p-12 border-2 border-[var(--border-default)] mb-10 scroll-animate">
-                    <h3 id="skills" class="text-2xl font-bold text-[var(--text-contrast)] border-b-2 border-[var(--glitch-red-shadow)] pb-2 mb-4 mt-8">Skills</h3>
+                <div id="skills" class="bg-[var(--bg-secondary)] rounded-xl shadow-xl p-8 md:p-12 border-2 border-[var(--border-default)] mb-10 scroll-animate">
+                    <h3 class="text-2xl font-bold text-[var(--text-contrast)] border-b-2 border-[var(--glitch-red-shadow)] pb-2 mb-4 mt-8">Skills</h3>
                     <p class="text-[var(--text-primary)] mb-8">
                         This chart visualizes my proficiency in skills that align with strategic design and development. The blend of professional and technical abilities positions me to contribute effectively to innovative projects.
                     </p>
