--- a/gallery.html
+++ b/gallery.html
@@ -11,7 +11,6 @@
         /* Define color variables for dark mode (default) */
         :root {
             --bg-primary: #1A1A1A;
-            --bg-secondary: #333333;
             --text-primary: #BBBBBB;
             --text-contrast: #FFFFFF;
             --border-default: #333333;
@@ -23,7 +22,6 @@
         /* Define color variables for light mode */
         body.light-mode {
             --bg-primary: #F3F4F6;
-            --bg-secondary: #E5E7EB;
             --text-primary: #4B5563;
             --text-contrast: #1F2937;
             --border-default: #D1D5DB;
@@ -241,7 +239,7 @@
         }
 
         .modal-content {
-            background-color: var(--bg-secondary);
+            background-color: var(--transparent);
             margin: 5% auto;
             padding: 40px;
             border: 2px solid var(--glitch-yellow-main);
@@ -275,9 +273,23 @@
             text-decoration: none;
             cursor: pointer;
         }
+
+        /* Particle Canvas Styling */
+        #particle-canvas {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -2; /* Ensure it's behind everything */
+        }
     </style>
 </head>
 <body class="bg-[var(--bg-primary)] text-[var(--text-primary)]">
+
+    <!-- Canvas for the particle effect -->
+    <canvas id="particle-canvas"></canvas>
+
     <!-- Skip to Main Content Link -->
     <a href="#main-content" class="sr-only focus:not-sr-only absolute top-0 left-0 bg-retro-yellow text-dark-black p-3 rounded-br-lg z-[1000]">Skip to main content</a>
 
@@ -304,7 +316,7 @@
                     </ul>
                 </nav>
                 <!-- Theme Toggle Button (Desktop & Mobile) -->
-                <button id="theme-toggle" class="p-2 rounded-full hover:bg-[var(--bg-secondary)] transition-colors duration-300 focus:outline-none" aria-label="Toggle light and dark mode">
+                <button id="theme-toggle" class="p-2 rounded-full hover:bg-[var] transition-colors duration-300 focus:outline-none" aria-label="Toggle light and dark mode">
                     <!-- Moon Icon (for dark mode) -->
                     <svg id="moon-icon" class="w-6 h-6 text-[var(--text-primary)]" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z"></path>
@@ -335,7 +347,7 @@
 
     <main id="main-content" class="pt-24">
         <!-- Gallery Section -->
-        <section id="gallery" class="py-20 bg-[var(--bg-secondary)] static-section rounded-t-xl min-h-screen">
+        <section id="gallery" class="py-20 bg-[var] static-section rounded-t-xl min-h-screen">
             <div class="container mx-auto px-6 md:px-12">
                 <h2 class="text-4xl font-bold text-[var(--glitch-yellow-main)] mb-12 text-center glitch-text" data-text="Project Gallery">
                     Project Gallery
@@ -408,7 +420,7 @@
     </main>
 
     <!-- Footer -->
-    <footer class="bg-[var(--bg-secondary)] text-[var(--text-primary)] py-8 text-center rounded-t-xl">
+    <footer class="bg-[var] text-[var(--text-primary)] py-8 text-center rounded-t-xl">
         <div class="container mx-auto px-6 md:px-12">
             <p>&copy; 2025 Amanda Ramirez. All rights reserved.</p>
         </div>
@@ -667,6 +679,137 @@
             moonIcon.classList.add('hidden');
             sunIcon.classList.remove('hidden');
         }
+
+        // Interactive Particle Effect
+        const canvas = document.getElementById('particle-canvas');
+        const ctx = canvas.getContext('2d');
+        let particles = [];
+        let mouse = { x: null, y: null, radius: 100 };
+
+        // Handle window resizing
+        window.addEventListener('resize', () => {
+            canvas.width = window.innerWidth;
+            canvas.height = window.innerHeight;
+            init();
+        });
+        
+        // Define a set of colorful, iridescent color palettes
+        const iridescentPalettes = [
+            // Blue-Green Iridescence
+            ['rgba(0, 255, 255, 0.8)', 'rgba(0, 150, 255, 0.6)', 'rgba(0, 100, 255, 0.4)', 'rgba(0, 50, 255, 0.2)'],
+            // Pink-Gold Iridescence
+            ['rgba(255, 105, 180, 0.8)', 'rgba(255, 165, 0, 0.6)', 'rgba(255, 215, 0, 0.4)', 'rgba(255, 140, 0, 0.2)'],
+            // Purple-Blue Iridescence
+            ['rgba(138, 43, 226, 0.8)', 'rgba(75, 0, 130, 0.6)', 'rgba(65, 105, 225, 0.4)', 'rgba(106, 90, 205, 0.2)'],
+            // Green-Gold Iridescence
+            ['rgba(0, 255, 0, 0.8)', 'rgba(173, 255, 47, 0.6)', 'rgba(255, 215, 0, 0.4)', 'rgba(189, 183, 107, 0.2)'],
+            // Red-Orange Iridescence
+            ['rgba(255, 69, 0, 0.8)', 'rgba(255, 160, 122, 0.6)', 'rgba(255, 228, 181, 0.4)', 'rgba(255, 99, 71, 0.2)'],
+        ];
+
+        // Particle Class
+        class Particle {
+            constructor(x, y, directionX, directionY, size) {
+                this.x = x;
+                this.y = y;
+                this.directionX = directionX;
+                this.directionY = directionY;
+                this.size = size;
+                // Randomly select one of the iridescent color palettes
+                this.palette = iridescentPalettes[Math.floor(Math.random() * iridescentPalettes.length)];
+            }
+
+            draw() {
+                const gradient = ctx.createRadialGradient(
+                    this.x, this.y, 0, // Inner circle
+                    this.x, this.y, this.size * 2 // Outer circle
+                );
+                // Add color stops from the randomly chosen palette
+                gradient.addColorStop(0, this.palette[0]);
+                gradient.addColorStop(0.3, this.palette[1]);
+                gradient.addColorStop(0.6, this.palette[2]);
+                gradient.addColorStop(1, this.palette[3]);
+
+                ctx.beginPath();
+                ctx.arc(this.x, this.y, this.size, 0, Math.PI * 2, false);
+                ctx.fillStyle = gradient;
+                ctx.fill();
+            }
+
+            update() {
+                // Check if particle is still in bounds
+                if (this.x > canvas.width || this.x < 0) {
+                    this.directionX = -this.directionX;
+                }
+                if (this.y > canvas.height || this.y < 0) {
+                    this.directionY = -this.directionY;
+                }
+
+                // Collision detection with mouse
+                const dx = mouse.x - this.x;
+                const dy = mouse.y - this.y;
+                const distance = Math.sqrt(dx * dx + dy * dy);
+
+                if (distance < mouse.radius + this.size) {
+                    if (mouse.x < this.x && this.x < canvas.width - this.size * 10) {
+                        this.x += 10;
+                    }
+                    if (mouse.x > this.x && this.x > this.size * 10) {
+                        this.x -= 10;
+                    }
+                    if (mouse.y < this.y && this.y < canvas.height - this.size * 10) {
+                        this.y += 10;
+                    }
+                    if (mouse.y > this.y && this.y > this.size * 10) {
+                        this.y -= 10;
+                    }
+                }
+
+                // Move particle
+                this.x += this.directionX;
+                this.y += this.directionY;
+                this.draw();
+            }
+        }
+
+        // Create particle array
+        function init() {
+            particles = [];
+            let numberOfParticles = (canvas.height * canvas.width) / 7000;
+            
+            for (let i = 0; i < numberOfParticles; i++) {
+                let size = Math.random() * 3 + 1; // Smaller size for a more delicate effect
+                let x = (Math.random() * ((window.innerWidth - size * 2) - (size * 2)) + size * 2);
+                let y = (Math.random() * ((window.innerHeight - size * 2) - (size * 2)) + size * 2);
+                let directionX = (Math.random() * 0.4) - 0.2;
+                let directionY = (Math.random() * 0.4) - 0.2;
+                particles.push(new Particle(x, y, directionX, directionY, size));
+            }
+        }
+
+        // Animation loop
+        function animate() {
+            requestAnimationFrame(animate);
+            ctx.clearRect(0, 0, window.innerWidth, window.innerHeight);
+            for (let i = 0; i < particles.length; i++) {
+                particles[i].update();
+            }
+        }
+
+        // Mouse event listener for interaction
+        window.addEventListener('mousemove', (event) => {
+            mouse.x = event.x;
+            mouse.y = event.y;
+        });
+
+        // Initialize on page load
+        window.onload = function() {
+            canvas.width = window.innerWidth;
+            canvas.height = window.innerHeight;
+            init();
+            animate();
+        };
+
     </script>
 </body>
 </html>
