--- a/CaseStudy1.html
+++ b/CaseStudy1.html
@@ -138,13 +138,28 @@
         .rotate-270 {
             transform: rotate(270deg);
         }
+
+        #particle-canvas {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
+            pointer-events: none; /* Allows clicks to pass through to content below */
+        }
     </style>
 </head>
 <body class="dark-mode">
 
+<canvas id="particle-canvas"></canvas>
+
 <div id="top-header">
     <a href="https://aram814.github.io/Portfolio/gallery.html" class="px-4 py-2 text-sm rounded-full border border-border-default text-text-primary hover:bg-bg-secondary transition-colors duration-300">
         Return to Project Gallery
+    </a>
+    <a href="https://www.figma.com/proto/rRgYJm0GHxoA1oJYZysk50/Amanda-Ramirez?node-id=12-3&t=aJoXk7l3OJAIfE8L-1" target="_blank" class="px-4 py-2 text-sm rounded-full border border-border-default text-text-primary hover:bg-bg-secondary transition-colors duration-300">
+        Launch Prototype
     </a>
     <button id="theme-toggle" aria-label="Toggle light and dark mode">
         <svg id="moon-icon" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -216,14 +231,16 @@
     <div class="section-grid items-center">
         <div>
             <p class="text-lg"><strong>Methods:</strong> Competitive analysis of score-tracking apps, 5 player interviews, and contextual arcade observation.</p>
-            <p class="text-lg"><strong>Key Findings:</strong> Players valued nostalgia, hated cluttered interfaces, and wanted social features.</p>
-            <p class="text-lg"><strong>Personas:</strong> “The Competitor” and “The Collector” emerged as primary user types.</p>
         </div>
         <figure class="media mx-auto">
             <div class="media-box min-h-[250px]">
                 <img src="UserPersona.png" alt="User persona card" class="object-cover w-full h-full rounded-md" />
             </div>
         </figure>
+    </div>
+    <div class="mt-8">
+        <p class="text-lg"><strong>Key Findings:</strong> Players valued nostalgia, hated cluttered interfaces, and wanted social features.</p>
+        <p class="text-lg"><strong>Personas:</strong> “The Competitor” and “The Collector” emerged as primary user types.</p>
     </div>
 </section>
 
@@ -379,6 +396,133 @@
             behavior: 'smooth'
         });
     });
+
+    // Particle effect logic
+    const canvas = document.getElementById('particle-canvas');
+    const ctx = canvas.getContext('2d');
+    let particles = [];
+    let mouse = { x: null, y: null };
+
+    function setCanvasSize() {
+        canvas.width = window.innerWidth;
+        canvas.height = window.innerHeight;
+    }
+
+    class Particle {
+        constructor(x, y, radius, directionX, directionY, color, isThemeDependent) {
+            this.x = x;
+            this.y = y;
+            this.radius = radius;
+            this.directionX = directionX;
+            this.directionY = directionY;
+            this.color = color;
+            this.isThemeDependent = isThemeDependent;
+        }
+
+        draw() {
+            ctx.beginPath();
+            ctx.arc(this.x, this.y, this.radius, 0, Math.PI * 2, false);
+            ctx.fillStyle = this.color;
+            ctx.fill();
+        }
+
+        update() {
+            if (this.x + this.radius > canvas.width || this.x - this.radius < 0) {
+                this.directionX = -this.directionX;
+            }
+            if (this.y + this.radius > canvas.height || this.y - this.radius < 0) {
+                this.directionY = -this.directionY;
+            }
+            this.x += this.directionX;
+            this.y += this.directionY;
+
+            // Mouse interaction
+            const dx = mouse.x - this.x;
+            const dy = mouse.y - this.y;
+            const distance = Math.sqrt(dx * dx + dy * dy);
+            const maxDistance = 100;
+            const attractionForce = 0.5;
+
+            if (distance < maxDistance) {
+                const forceDirectionX = dx / distance;
+                const forceDirectionY = dy / distance;
+                this.x -= forceDirectionX * attractionForce;
+                this.y -= forceDirectionY * attractionForce;
+            }
+
+            this.draw();
+        }
+    }
+
+    function initParticles() {
+        particles = [];
+        const baseCount = (canvas.width * canvas.height) / 10000;
+        
+        // Create yellow particles
+        const yellowColor = '#F1C40F';
+        for (let i = 0; i < baseCount; i++) {
+            const radius = Math.random() * 2 + 1;
+            let x = Math.random() * (canvas.width - radius * 2) + radius;
+            let y = Math.random() * (canvas.height - radius * 2) + radius;
+            let directionX = (Math.random() - 0.5) * 1.5;
+            let directionY = (Math.random() - 0.5) * 1.5;
+            particles.push(new Particle(x, y, radius, directionX, directionY, yellowColor, true));
+        }
+
+        // Create purple particles
+        const purpleColor = '#804cbe';
+        for (let i = 0; i < baseCount * 1.5; i++) { // Add 50% more particles
+            const radius = Math.random() * 2 + 1;
+            let x = Math.random() * (canvas.width - radius * 2) + radius;
+            let y = Math.random() * (canvas.height - radius * 2) + radius;
+            let directionX = (Math.random() - 0.5) * 2; // Make them a bit faster
+            let directionY = (Math.random() - 0.5) * 2; // Make them a bit faster
+            particles.push(new Particle(x, y, radius, directionX, directionY, purpleColor, false));
+        }
+    }
+
+    function animate() {
+        requestAnimationFrame(animate);
+        ctx.clearRect(0, 0, canvas.width, canvas.height);
+        for (let i = 0; i < particles.length; i++) {
+            particles[i].update();
+        }
+    }
+
+    window.addEventListener('resize', () => {
+        setCanvasSize();
+        initParticles();
+    });
+
+    window.addEventListener('mousemove', (event) => {
+        mouse.x = event.x;
+        mouse.y = event.y;
+    });
+
+    window.onload = function () {
+        setCanvasSize();
+        initParticles();
+        animate();
+    };
+
+    // Update particle color on theme change
+    const observer = new MutationObserver(mutations => {
+        mutations.forEach(mutation => {
+            if (mutation.attributeName === 'class') {
+                const bodyClassList = body.classList;
+                const yellowColor = bodyClassList.contains('dark-mode') ? '#F1C40F' : '#FFD700';
+                
+                particles.forEach(p => {
+                    if (p.isThemeDependent) {
+                        p.color = yellowColor;
+                    }
+                });
+            }
+        });
+    });
+
+    observer.observe(body, { attributes: true });
+
 </script>
 </body>
 </html>
