--- a/gallery.html
+++ b/gallery.html
@@ -406,7 +406,7 @@
 
                     <!-- New Project Card 6 - Copy and customize this block for another project -->
                     <li class="bg-[var(--bg-primary)] rounded-xl shadow-xl overflow-hidden border-2 border-[var(--border-default)] project-card cursor-pointer" onclick="openModal('project6')">
-                        <img src="https://placehold.co/600x300/E74C3C/FFFFFF?text=CPR+Ready" alt="Placeholder image for CPR Ready Project" class="w-full h-48 object-cover border-b-2 border-[var(--glitch-red-shadow)]">
+                        <img src="CS6Snip.png" alt="Screenshot of CPR Ready App" class="w-full h-48 object-cover border-b-2 border-[var(--glitch-red-shadow)]">
                         <div class="p-6">
                             <h3 class="text-2xl font-semibold text-[var(--text-contrast)] mb-2">CPR Ready</h3>
                             <p class="text-[var(--text-primary)] text-sm mb-4">UX Designer</p>
@@ -539,7 +539,7 @@
         <div class="modal-content">
             <span class="close-button" onclick="closeModal('project6')" aria-label="Close">&times;</span>
             <h3 id="project6ModalTitle" class="text-3xl font-bold text-[var(--glitch-yellow-main)] mb-4">Another Awesome Project</h3>
-            <img src="https://placehold.co/600x300/E74C3C/FFFFFF?text=Project+6" alt="Placeholder image for another new project" class="w-full h-auto object-cover mb-6 rounded-lg border-2 border-[var(--glitch-red-shadow)]">
+            <img src="CS6Snip.png" alt="Screenshot of CPR Ready App" class="w-full h-auto object-cover mb-6 rounded-lg border-2 border-[var(--glitch-red-shadow)]">
             <p class="text-[var(--text-primary)] mb-4">
                 Describe your project here. Remember to highlight your contributions and the skills you utilized.
             </p>
