--- a/gallery.html
+++ b/gallery.html
@@ -406,7 +406,7 @@
 
                     <!-- New Project Card 6 - Copy and customize this block for another project -->
                     <li class="bg-[var(--bg-primary)] rounded-xl shadow-xl overflow-hidden border-2 border-[var(--border-default)] project-card cursor-pointer" onclick="openModal('project6')">
-                        <img src="CS6Snip.png" alt="Screenshot of CPR Ready App" class="w-full h-48 object-cover border-b-2 border-[var(--glitch-red-shadow)]">
+                        <img src="CS6Title.png" alt="Screenshot of CPR Ready App" class="w-full h-48 object-cover border-b-2 border-[var(--glitch-red-shadow)]">
                         <div class="p-6">
                             <h3 class="text-2xl font-semibold text-[var(--text-contrast)] mb-2">CPR Ready</h3>
                             <p class="text-[var(--text-primary)] text-sm mb-4">UX Designer</p>
