--- a/CaseStudy6.html
+++ b/CaseStudy6.html
@@ -158,7 +158,7 @@
     <a href="https://www.figma.com/proto/aqreVbJvvgbsOiimkqVpNl/CPR-Ready%C2%A0%E2%80%93-UX-Case-Study?node-id=1-6&t=PoSstVqAVyAZVflz-1" class="px-4 py-2 text-sm rounded-full border border-border-default text-text-primary hover:bg-bg-secondary transition-colors duration-300">
         Launch Prototype
     </a>
-    <a href="#" class="px-4 py-2 text-sm rounded-full border border-border-default text-text-primary hover:bg-bg-secondary transition-colors duration-300">
+    <a href="https://aram814.github.io/Portfolio/gallery.html" class="px-4 py-2 text-sm rounded-full border border-border-default text-text-primary hover:bg-bg-secondary transition-colors duration-300">
         Return to Project Gallery
     </a>
     <button id="theme-toggle" aria-label="Toggle light and dark mode">
