--- a/CaseStudy2.html
+++ b/CaseStudy2.html
@@ -151,7 +151,7 @@
     <a href="https://www.queersafespace.org" class="px-4 py-2 text-sm rounded-full border border-border-default text-text-primary hover:bg-bg-secondary transition-colors duration-300">
         Join App Waitlist
     </a>
-    <a href="https://aram814.github.io/Portfolio/gallery.html" class="px-4 py-2 text-sm rounded-full border border-border-default text-text-primary hover:bg-bg-secondary transition-colors duration-300">
+    <a href="https://aram814.github.io/gallery.html" class="px-4 py-2 text-sm rounded-full border border-border-default text-text-primary hover:bg-bg-secondary transition-colors duration-300">
         Return to Project Gallery
     </a>
     <button id="theme-toggle" aria-label="Toggle light and dark mode">
