Update gallery link to point to GitHub Pages

--- a/CaseStudy1.html
+++ b/CaseStudy1.html
@@ -155,7 +155,7 @@
 <canvas id="particle-canvas"></canvas>
 
 <div id="top-header">
-    <a href="gallery.html" class="px-4 py-2 text-sm rounded-full border border-border-default text-text-primary hover:bg-bg-secondary transition-colors duration-300">
+    <a href="https://aram814.github.io/gallery.html" class="px-4 py-2 text-sm rounded-full border border-border-default text-text-primary hover:bg-bg-secondary transition-colors duration-300">
         Return to Project Gallery
     </a>
     <a href="https://www.figma.com/proto/rRgYJm0GHxoA1oJYZysk50/Amanda-Ramirez?node-id=12-3&t=aJoXk7l3OJAIfE8L-1" target="_blank" class="px-4 py-2 text-sm rounded-full border border-border-default text-text-primary hover:bg-bg-secondary transition-colors duration-300">
