Change button text from 'Join App Waitlist' to 'Sign up Today!'

--- a/CaseStudy2.html
+++ b/CaseStudy2.html
@@ -149,7 +149,7 @@
         Launch Prototype
     </a>
     <a href="https://www.queersafespace.org" class="px-4 py-2 text-sm rounded-full border border-border-default text-text-primary hover:bg-bg-secondary transition-colors duration-300">
-        Join App Waitlist
+        Sign up Today!
     </a>
     <a href="https://aram814.github.io/gallery.html" class="px-4 py-2 text-sm rounded-full border border-border-default text-text-primary hover:bg-bg-secondary transition-colors duration-300">
         Return to Project Gallery
