--- a/CaseStudy3.html
+++ b/CaseStudy3.html
@@ -148,7 +148,7 @@
     <a href="https://sendmeonmyway.info" class="px-4 py-2 text-sm rounded-full border border-border-default text-text-primary hover:bg-bg-secondary transition-colors duration-300">
         Visit Site
     </a>
-    <a href="https://aram814.github.io/Portfolio/gallery.html" class="px-4 py-2 text-sm rounded-full border border-border-default text-text-primary hover:bg-bg-secondary transition-colors duration-300">
+    <a href="https://aram814.github.io/gallery.html" class="px-4 py-2 text-sm rounded-full border border-border-default text-text-primary hover:bg-bg-secondary transition-colors duration-300">
         Return to Project Gallery
     </a>
     <button id="theme-toggle" aria-label="Toggle light and dark mode">
