--- a/CaseStudy5.html
+++ b/CaseStudy5.html
@@ -158,7 +158,7 @@
     <a href="https://aram814.github.io/First_Love_Church/" class="px-4 py-2 text-sm rounded-full border border-border-default text-text-primary hover:bg-bg-secondary transition-colors duration-300">
         Visit Site
     </a>
-    <a href="https://aram814.github.io/Portfolio/gallery.html" class="px-4 py-2 text-sm rounded-full border border-border-default text-text-primary hover:bg-bg-secondary transition-colors duration-300">
+    <a href="https://aram814.github.io/gallery.html" class="px-4 py-2 text-sm rounded-full border border-border-default text-text-primary hover:bg-bg-secondary transition-colors duration-300">
         Return to Project Gallery
     </a>
     <button id="theme-toggle" aria-label="Toggle light and dark mode">
