Update meta description in CaseStudy5.html

--- a/CaseStudy5.html
+++ b/CaseStudy5.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Women's Fellowship – Case Study | Amanda Ramirez</title>
-    <meta name="description" content="A live website built to replace a vandalized physical bulletin board. The digital bulletin was created to be accessible and easy-to-use for elderly women." />
+    <meta name="description" content="A live website built to replace a physical bulletin board. The digital bulletin was created to be accessible and easy-to-use for elderly women." />
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Inter:wght@400;600&display=swap" rel="stylesheet">
     <style>
