Update Home link to point to new URL

--- a/resumeindex.html
+++ b/resumeindex.html
@@ -273,7 +273,7 @@
             <div class="flex items-center space-x-6">
                 <nav class="hidden md:flex" role="navigation" aria-label="Main Navigation">
                     <ul class="flex space-x-6">
-                        <li><a href="https://aram814.github.io/Portfolio/index.html" class="text-[var(--text-primary)] hover:text-[var(--glitch-blue-shadow)] transition duration-300 text-lg">Home</a></li>
+                        <li><a href="https://aram814.github.io/index.html" class="text-[var(--text-primary)] hover:text-[var(--glitch-blue-shadow)] transition duration-300 text-lg">Home</a></li>
                         <li><a href="#experience" class="text-[var(--text-primary)] hover:text-[var(--glitch-blue-shadow)] transition duration-300 text-lg">Experience</a></li>
                         <li><a href="#education" class="text-[var(--text-primary)] hover:text-[var(--glitch-blue-shadow)] transition duration-300 text-lg">Education</a></li>
                         <li><a href="#skills" class="text-[var(--text-primary)] hover:text-[var(--glitch-blue-shadow)] transition duration-300 text-lg">Skills</a></li>
@@ -302,7 +302,7 @@
         <!-- Mobile Navigation Menu -->
         <nav id="mobile-menu" class="hidden md:hidden bg-[var(--bg-primary)]/90 pt-4 pb-2 mt-4 rounded-b-xl border-t border-[var(--border-default)]" role="navigation" aria-label="Mobile Navigation">
             <ul class="flex flex-col items-center space-y-4">
-                <li><a href="https://aram814.github.io/Portfolio/index.html" class="block w-full text-center text-[var(--text-primary)] hover:text-[var(--glitch-blue-shadow)] transition duration-300 text-xl py-2">Home</a></li>
+                <li><a href="https://aram814.github.io/index.html" class="block w-full text-center text-[var(--text-primary)] hover:text-[var(--glitch-blue-shadow)] transition duration-300 text-xl py-2">Home</a></li>
                 <li><a href="#experience" class="block w-full text-center text-[var(--text-primary)] hover:text-[var(--glitch-blue-shadow)] transition duration-300 text-xl py-2">Experience</a></li>
                 <li><a href="#education" class="block w-full text-center text-[var(--text-primary)] hover:text-[var(--glitch-blue-shadow)] transition duration-300 text-xl py-2">Education</a></li>
                 <li><a href="#skills" class="block w-full text-center text-[var(--text-primary)] hover:text-[var(--glitch-blue-shadow)] transition duration-300 text-xl py-2">Skills</a></li>
