Update Projects link in resumeindex.html

--- a/resumeindex.html
+++ b/resumeindex.html
@@ -277,7 +277,7 @@
                         <li><a href="#experience" class="text-[var(--text-primary)] hover:text-[var(--glitch-blue-shadow)] transition duration-300 text-lg">Experience</a></li>
                         <li><a href="#education" class="text-[var(--text-primary)] hover:text-[var(--glitch-blue-shadow)] transition duration-300 text-lg">Education</a></li>
                         <li><a href="#skills" class="text-[var(--text-primary)] hover:text-[var(--glitch-blue-shadow)] transition duration-300 text-lg">Skills</a></li>
-                        <li><a href="https://aram814.github.io/Portfolio/gallery.html" class="text-[var(--text-primary)] hover:text-[var(--glitch-blue-shadow)] transition duration-300 text-lg">Projects</a></li>
+                        <li><a href="https://aram814.github.io/gallery.html" class="text-[var(--text-primary)] hover:text-[var(--glitch-blue-shadow)] transition duration-300 text-lg">Projects</a></li>
                     </ul>
                 </nav>
                 <!-- Theme Toggle Button (Desktop & Mobile) -->
@@ -306,7 +306,7 @@
                 <li><a href="#experience" class="block w-full text-center text-[var(--text-primary)] hover:text-[var(--glitch-blue-shadow)] transition duration-300 text-xl py-2">Experience</a></li>
                 <li><a href="#education" class="block w-full text-center text-[var(--text-primary)] hover:text-[var(--glitch-blue-shadow)] transition duration-300 text-xl py-2">Education</a></li>
                 <li><a href="#skills" class="block w-full text-center text-[var(--text-primary)] hover:text-[var(--glitch-blue-shadow)] transition duration-300 text-xl py-2">Skills</a></li>
-                <li><a href="https://aram814.github.io/Portfolio/gallery.html" class="block w-full text-center text-[var(--text-primary)] hover:text-[var(--glitch-blue-shadow)] transition duration-300 text-xl py-2">Projects</a></li>
+                <li><a href="https://aram814.github.io/gallery.html" class="block w-full text-center text-[var(--text-primary)] hover:text-[var(--glitch-blue-shadow)] transition duration-300 text-xl py-2">Projects</a></li>
             </ul>
         </nav>
     </header>
